# GBPLSegmentation

./: CMakeLists.txt
include/: tttGBPL.h  tttGBPLDistribution.h  tttGBPLLikelihood.h  tttGBPLRegionSynthetizer.h  tttRJMCMCGBPLInference.h
src/: tttGBPLInferenceTest.cpp  tttGBPLSamplerTest.cpp
